--- a/spring-boot-crud-example/src/main/resources/application.properties
+++ b/spring-boot-crud-example/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=5000
 
-spring.datasource.url=jdbc:mysql://testmysqldb.c0pjw9fyvmty.us-east-2.rds.amazonaws.com:3306/testmysqldb
-spring.datasource.username=root
-spring.datasource.password=root1234
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.platform=mysql
 spring.datasource.initialization-mode=always
 spring.jpa.hibernate.ddl-auto=create
